Initial commit to supply ability to hide and show transcription documents
