# src/main/java/uk/gov/hmcts/darts/transcriptions/mapper/TranscriptionResponseMapper.java
@@ -8,6 +8,7 @@ import uk.gov.hmcts.darts.common.entity.CourthouseEntity;
 import uk.gov.hmcts.darts.common.entity.EventHandlerEntity;
 import uk.gov.hmcts.darts.common.entity.HearingEntity;
 import uk.gov.hmcts.darts.common.entity.HearingReportingRestrictionsEntity;
+import uk.gov.hmcts.darts.common.entity.ObjectAdminActionEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionCommentEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionDocumentEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionEntity;
@@ -19,12 +20,14 @@ import uk.gov.hmcts.darts.common.exception.DartsApiException;
 import uk.gov.hmcts.darts.common.repository.HearingReportingRestrictionsRepository;
 import uk.gov.hmcts.darts.transcriptions.enums.TranscriptionStatusEnum;
 import uk.gov.hmcts.darts.transcriptions.exception.TranscriptionApiError;
+import uk.gov.hmcts.darts.transcriptions.model.AdminActionResponse;
 import uk.gov.hmcts.darts.transcriptions.model.GetTranscriptionByIdResponse;
 import uk.gov.hmcts.darts.transcriptions.model.GetTranscriptionDetailAdminResponse;
 import uk.gov.hmcts.darts.transcriptions.model.GetTranscriptionDocumentByIdResponse;
 import uk.gov.hmcts.darts.transcriptions.model.GetTranscriptionWorkflowsResponse;
 import uk.gov.hmcts.darts.transcriptions.model.ReportingRestriction;
 import uk.gov.hmcts.darts.transcriptions.model.Requestor;
+import uk.gov.hmcts.darts.transcriptions.model.TranscriptionDocumentHideResponse;
 import uk.gov.hmcts.darts.transcriptions.model.TranscriptionTypeResponse;
 import uk.gov.hmcts.darts.transcriptions.model.TranscriptionUrgencyDetails;
 import uk.gov.hmcts.darts.transcriptions.model.TranscriptionUrgencyResponse;
@@ -301,6 +304,29 @@ public class TranscriptionResponseMapper {
         response.setUploadedAt(entity.getUploadedDateTime());
         response.setUploadedBy(entity.getUploadedBy().getId());
         response.setIsHidden(entity.isHidden());
+        return response;
+    }
+
+    public TranscriptionDocumentHideResponse mapHideOrShowResponse(TranscriptionDocumentEntity entity, ObjectAdminActionEntity objectAdminActionEntity) {
+        TranscriptionDocumentHideResponse response = new TranscriptionDocumentHideResponse();
+        response.setId(entity.getId());
+        response.setIsHidden(entity.isHidden());
+
+        if (objectAdminActionEntity != null) {
+            AdminActionResponse adminActionResponse = new AdminActionResponse();
+            adminActionResponse.setId(objectAdminActionEntity.getId());
+            adminActionResponse.setReasonId(objectAdminActionEntity.getObjectHiddenReason().getId());
+            adminActionResponse.setHiddenById(objectAdminActionEntity.getHiddenBy().getId());
+            adminActionResponse.setHiddenAt(objectAdminActionEntity.getHiddenDateTime());
+            adminActionResponse.setIsMarkedForManualDeletion(objectAdminActionEntity.isMarkedForManualDeletion());
+            adminActionResponse.setMarkedForManualDeletionById(objectAdminActionEntity.getMarkedForManualDelBy().getId());
+            adminActionResponse.setMarkedForManualDeletionAt(objectAdminActionEntity.getMarkedForManualDelDateTime());
+            adminActionResponse.setTicketReference(objectAdminActionEntity.getTicketReference());
+            adminActionResponse.setComments(objectAdminActionEntity.getComments());
+
+            response.setAdminAction(adminActionResponse);
+        }
+
         return response;
     }
 
